# django-template

./: .coveragerc  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  manage.py  package-lock.json  package.json  production_main.py  pyproject.toml  requirements.dev.txt  requirements.txt  webpack.config.js
.github/workflows/: master_escorts-uruguay.yml
applications/: apps.py  exceptions.py  utils.py
applications/core/: urls.py
applications/tenants/: admin.py  controllers.py  middlewares.py  models.py  urls.py
config/: settings.py  urls.py
config/settings/: base.py  production.py
src/: api.js  app.js  index.html  index.js  sidebar.css  styles.css
src/components/: AccountForm.js  AccountFormRefactored.js  Accounts.js  ArchivableTable.js  ArchivedAccountsSection.js  BranchCard.js  BranchList.js  CompanyCard.js  CompanyList.js  ConceptFormModal.js  ConceptRow.js  Dashboard.js  DataTable.js  EditableCell.js  EmptyState.js  FlashMessage.js  GenericForm.js  GenericFormModal.js  GoogleAuth.js  Header.js  ImportModal.js  InvestmentDetails.js  InvestmentEntryFormModal.js  InvestmentFormModal.js  InvestmentImport.js  SearchableSelect.js  TableActions.js  TotalsRow.js  TransactionFilters.js  TransactionForm.js  TransactionFormModal.js  TransactionList.js
src/constants/: appConstants.js
src/contexts/: DashboardContext.js
src/hooks/: useDashboardData.js  useInvestments.js  usePastMonths.js  useTransactionSubmit.js
static/: app.js  styles.css
templates/: index.html  webpack.html
templatetags/: generic_helper.py
(+34 files in other folders)
